--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@
 **/*.pyc
 Cargo.lock
 
+**/build/
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
